--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:27.0.2'
+    debugCompile 'com.amitshekhar.android:debug-db:1.0.1'
     compile 'com.google.firebase:firebase-core:11.8.0'
     compile 'com.google.firebase:firebase-database:11.8.0'
     testImplementation 'junit:junit:4.12'
@@ -35,6 +36,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'com.pixplicity.easyprefs:library:1.9.0'
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
     implementation 'com.firebaseui:firebase-ui-database:3.2.1'
 }
 apply plugin: 'com.google.gms.google-services'
