--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,11 @@ dependencies {
     compile 'com.pixplicity.easyprefs:library:1.9.0'
     compile 'com.google.firebase:firebase-messaging:11.8.0'
     implementation 'com.firebaseui:firebase-ui-database:3.2.1'
+    compile 'com.amitshekhar.android:android-networking:1.0.1'
+    // Room (use 1.1.0-alpha1 for latest alpha)
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    debugCompile 'com.amitshekhar.android:debug-db:1.0.2'
+    compile "io.reactivex.rxjava2:rxjava:2.1.2"
 }
 apply plugin: 'com.google.gms.google-services'
