--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -21,6 +22,7 @@ android {
         sourceCompatibility 1.8
     }
 }
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -44,5 +46,6 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     debugCompile 'com.amitshekhar.android:debug-db:1.0.2'
     compile "io.reactivex.rxjava2:rxjava:2.1.3"
+    compile 'com.github.nekocode:Emojix:1.2'
 }
 apply plugin: 'com.google.gms.google-services'
