--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     debugCompile 'com.amitshekhar.android:debug-db:1.0.2'
     compile "io.reactivex.rxjava2:rxjava:2.1.3"
+    compile 'com.github.hani-momanii:SuperNova-Emoji:1.1'
     compile 'com.github.nekocode:Emojix:1.2'
 }
 apply plugin: 'com.google.gms.google-services'
